[gd_scene load_steps=8 format=2]

[ext_resource path="res://src/characters/Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://images/characters/enemies/enemyBlue4.png" type="Texture" id=2]
[ext_resource path="res://src/characters/Enemy.gd" type="Script" id=3]
[ext_resource path="res://images/characters/enemies/rockets/Space Ship 2.png" type="Texture" id=4]
[ext_resource path="res://src/states/Enemy Only/Shooting.tscn" type="PackedScene" id=5]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "left",
"speed": 5.0
}, {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "right",
"speed": 5.0
}, {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "up",
"speed": 5.0
}, {
"frames": [ ExtResource( 4 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 4 ) ],
"loop": true,
"name": "down",
"speed": 5.0
} ]

[sub_resource type="Gradient" id=2]
offsets = PoolRealArray( 0.111406, 0.899204 )
colors = PoolColorArray( 1, 1, 1, 1, 1, 1, 1, 0 )

[node name="Enemy" instance=ExtResource( 1 )]
script = ExtResource( 3 )
character_type = "enemy"

[node name="Petals" parent="Pivot" index="0"]
visible = false

[node name="Sprite" parent="Pivot" index="1"]
position = Vector2( -0.152756, -5.04102 )
scale = Vector2( 0.2, 0.2 )
frames = SubResource( 1 )

[node name="ChargeBar" parent="Pivot" index="3"]
visible = false

[node name="CollisionShape2D" parent="." index="1"]
scale = Vector2( 16.52, 18.56 )

[node name="Shooting" parent="States" index="2" instance=ExtResource( 5 )]

[node name="BulletCD" parent="Timers" index="0"]
wait_time = 0.3

[node name="Trail" parent="Particles" index="0"]
visible = true
modulate = Color( 0.905882, 0.380392, 0.380392, 1 )
position = Vector2( -1.87589, -37.5283 )
amount = 30
lifetime = 1.5
texture = null
initial_velocity = 0.0
scale_amount = 3.0
color_ramp = SubResource( 2 )

[node name="BulletSpawner" parent="Addons" index="0"]
position = Vector2( -4.49927, 46.41 )

[node name="StateLabel" parent="Addons" index="1"]
margin_top = -42.2826
margin_bottom = -22.2826

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="Addons" index="4"]
rect = Rect2( -10, 20, 20, 20 )

[node name="Hurtbox" parent="Addons" index="5"]
position = Vector2( -4.4699, 5.96195 )
scale = Vector2( 1.40377, 2.88 )
[connection signal="timeout" from="Timers/BulletCD" to="." method="_on_BulletCD_timeout"]
[connection signal="screen_exited" from="Addons/VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]

[editable path="Addons/Hurtbox"]
